# cursor-clip

./: Cargo.toml  test_events.sh
src/backend/: backend_state.rs  ipc_server.rs  wayland_clipboard.rs
src/frontend/: gtk_overlay.rs  ipc_client.rs
src/shared/: data_structures.rs
